fix aar dependencies
- Added ktor and multiplatform settings to the project
- To generate aar locally it is needed to have dependencies in the project, otherwise we have to generate fat-aar with the following plugin:
https://github.com/kezong/fat-aar-android
but then we have duplicated class issues

--- a/helios-sampleapp/build.gradle
+++ b/helios-sampleapp/build.gradle
@@ -10,6 +10,7 @@ repositories {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply from: 'helios_rewarding_sdk.gradle'
 
 android {
     compileSdkVersion 29
@@ -41,11 +42,10 @@ android {
 }
 
 dependencies {
-//    implementation(name: 'helios-rewarding-sdk-debug', ext: 'aar') {
-//        transitive = true
-//    }
+    //implementation(name: 'helios-rewarding-sdk-debug', ext: 'aar')
+    //implementation(name: 'helios-rewarding-sdk-release', ext: 'aar')
     implementation project(":helios-rewarding-sdk")
-//    implementation fileTree(dir: 'libs', include: ['*.aar'])
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
 
@@ -62,9 +62,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-
-    implementation "com.russhwolf:multiplatform-settings:$multiplatform_settings_version"
-
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
