--- a/helios-rewarding-sdk/build.gradle
+++ b/helios-rewarding-sdk/build.gradle
@@ -5,6 +5,7 @@ plugins {
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply from: 'helios_rewarding_sdk.gradle'
 
 repositories {
     google()
@@ -45,12 +46,6 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$serialization_version"
-
-    implementation "com.russhwolf:multiplatform-settings:0.5"
-    implementation "io.ktor:ktor-client-android:$ktor_version"
-    implementation "io.ktor:ktor-client-gson:$ktor_version"
-    implementation "io.ktor:ktor-client-auth-jvm:$ktor_version"
-    implementation "io.ktor:ktor-client-logging-jvm:$ktor_version"
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
