--- a/helios-sampleapp/build.gradle
+++ b/helios-sampleapp/build.gradle
@@ -42,9 +42,9 @@ android {
 }
 
 dependencies {
-    //implementation(name: 'helios-rewarding-sdk-debug', ext: 'aar')
+    implementation(name: 'helios-rewarding-sdk-debug', ext: 'aar')
     //implementation(name: 'helios-rewarding-sdk-release', ext: 'aar')
-    implementation project(":helios-rewarding-sdk")
+//    implementation project(":helios-rewarding-sdk")
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
